2013-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el: Don't use obsolete macro dont-compile.

	* w3m.el (w3m-goto-mailto-url): Bind display-buffer-alist instead of
	special-display-buffer-names and special-display-regexps for Emacs >=
	24.3.

	* w3m-ems.el (w3m-image-multi-frame-p): Exclude images that don't
	specify a delay.

2013-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter): Don't modify w3m-filter-rules.

2013-04-12  REN Lifeng  <renlifeng@wowfly.com>

	* w3m-session.el (w3m-session-rename): Don't infloop.

2013-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-configuration):
	Use w3m-language rather than w3m-use-japanese-menu.

2013-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-add-name-anchors): Fix regexp matching name
	anchors.  Reported by Dan Jacobson <jidanni@jidanni.org>.

2013-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-get-by-name): Distinguish the type of forms of
	the same names.  Reported by Kevin Ryde <user42@zip.com.au>.
	(w3m-form-resume, w3m-form-parse-and-fontify, w3m-form-input-map): Do.

2013-04-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-fix-tfoot-rendering): New filter.
	(w3m-filter-configuration): Add it but not activate.

	* w3m-ems.el (w3m-image-multi-frame-p): New alias.
	(w3m-image-animate): Use it.

2013-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Remove workaround.
	* w3m-util.el (w3m-force-window-update-later): Make 1st arg optional.
	* w3m-ems.el (w3m-force-window-update): A window need to be redisplayed
	for `force-window-update' to work (see the docstring).

2013-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-lnum.el (w3m-lnum-read-interactive): Replace w3m-scroll-up-1 with
	w3m-scroll-up.

	* w3m.el (w3m-scroll-up): Rename from w3m-scroll-up-1.
	(w3m-scroll-up, w3m-scroll-up-or-next-url): Make the bottom of a page